Initial version complete

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(compose_trans)
 export(even_lims)
 export(make_axes)
 export(mat2latex)
+export(mat_pows)
 export(plot_lines)
 export(plot_mat)
 export(plot_transform)
