--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,7 @@ Authors@R:
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
@@ -18,9 +17,16 @@ Imports:
     ggplot2,
     tibble,
     grid,
-    gridExtra
+    gridExtra,
+    cowplot,
+    dplyr,
+    purrr,
+    scales
 Depends: 
     magrittr
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown
 Config/testthat/edition: 3
+VignetteBuilder: knitr
