--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: matador
-Title: Linear ALgebra Visualization
-Version: 0.0.0.9000
+Title: Linear Algebra Visualization
+Version: 1.3.0
 Authors@R: 
     person(given = "Ryan",
            family = "Heslin",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "rh3788a@american.edu")
+Description: Provide functions for plotting vectors in two-dimensional space, computing and rendering matrix equations, and other common linearalgebra assignments.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
