--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,24 @@
 
 export("%>%")
 export("%^%")
+export(angle)
 export(check_commute)
 export(compose_trans)
+export(dot)
 export(even_lims)
 export(gen_inverse)
+export(l1)
+export(l2)
 export(make_axes)
 export(mat2latex)
 export(mat_pows)
+export(normalize)
+export(plot_decomposition)
 export(plot_lines)
 export(plot_mat)
 export(plot_transform)
+export(poly2latex)
+export(print_eqn)
 export(solve_trans)
 export(square)
 export(tidy_mat)
