--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(angle)
 export(check_commute)
 export(compose_trans)
 export(dot)
+export(equation2latex)
 export(even_lims)
+export(extract_values)
 export(gen_inverse)
 export(l1)
 export(l2)
